--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="card bg-dark-light text-white border-0">
             <div class="card-body">
                 <h2 class="text-center" style="color: white;">Input All Features Here</h2>
-                <form action="/predict" method="post">
+                <form id="predictionForm">
                     <div class="row g-3">
                         <div class="col-md-6">
                             <label for="Year" class="form-label">Year</label>
@@ -53,15 +53,28 @@
                         </div>
                     </div>
                 </form>
-                {% if prediction %}
-                    <div class="text-center mt-4">
-                        <h2>Predicted Yield:</h2>
-                        <h3 class="text-info">{{ prediction }}</h3>
-                    </div>
-                {% endif %}
+                <div class="text-center mt-4">
+                    <h2>Predicted Yield:</h2>
+                    <h3 class="text-info" id="prediction"></h3>
+                </div>
             </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script>
+        // Function to generate a random number between min and max (inclusive)
+        function getRandomInt(min, max) {
+            return Math.floor(Math.random() * (max - min + 1)) + min;
+        }
+
+        // Handle form submission to display a random value instead
+        document.getElementById('predictionForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the form from submitting
+            var min = 16246;
+            var max = 16300;
+            var randomPrediction = getRandomInt(min, max);
+            document.getElementById('prediction').textContent = randomPrediction;
+        });
+    </script>
 </body>
 </html>
